--- a/templates/cotisation/formdon.html.twig
+++ b/templates/cotisation/formdon.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Adhesion{% endblock %}
 
 {% block body %}
+<div class="container my-class">
 <form action="" method="POST">
 <p><h2>Je fais un don</h2></p>
 {# <label> Nombre de mois</label> #}
@@ -10,8 +11,12 @@
 <select name="amountun">
     <option value="">--Please choisir une option--</option>
     <option value="500">Cinq euros = 5€</option>
+    <option value="4000">Cinquante euros = 40€</option>
     <option value="5000">Cinquante euros = 50€</option>
+    <option value="6000">Cinquante euros = 60€</option>
+    <option value="7500">Cinquante euros = 75€</option>
     <option value="10000">Cent euros = 100€</option>
+    <option value="15000">Cent euros = 150€</option>
     <option value="20000">Deux-cent = 200€</option>
     <option value="30000">Tois-cent =  300€</option>
     <option value="50000">Cinq-cent euros = 500€</option>
@@ -21,13 +26,10 @@
     <option value="500000">Cinq-mille euros = 5000€</option>
     <option value="1000000">Dix-mille euros = 10000€</option>
 </select> 
-<button type="submit">Envoyer</button>
-{# <input type='button' name="stop" value="Annuler" onclick='location:http://fpiinscription.com/index.php/'> #}
-{# <button type="submit" name="stop" value="annuler">Annuler</button> #}
-</form>
+</div>
 
-<form action="http://fpiinscription.com/index.php/" method="POST">
- <input type="SUBMIT" name="bouton1" value="Annuler">
-</form>
+<button class="label label-success" type="submit">Envoyer</button>
+{# <a href="{{ path('home') }}"><p><h4><span class="label label-success">Retour</span></h4></p></a> #}
 
+</form>
 {% endblock %}
