--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -22,6 +22,8 @@
          <li><a href="{{ path('adhesion_newUpload') }}">Demande de carte</a></li>
          <li><a href="{{ path('adhesion_viewUpload') }}">Voir ma photo </a></li>
          <li><a href="{{ path('signature') }}">Signature electronique</a></li>
+         <li><a href="{{ path('adhesion_impression') }}">Impression</a></li>
+      
       </ul>
    </li>
       <li><a href="#">Documents FPI</a>
