--- a/templates/admin/listetotal.html.twig
+++ b/templates/admin/listetotal.html.twig
@@ -10,12 +10,12 @@
 				<h6>Représentation FPI-FRANCE</h6>        
 			</div>
 
-<caption class="well well-sm"><h2> Liste totale de tous le site</h2></caption>
+<caption class="well well-sm"><h2> Liste totale de tous le adherents</h2></caption>
 
     <table>
 
       
-    {% if listusers %}
+    {% if users %}
                 {# <td class="well well-sm">{{ count.ref }}</td> #}
             <tr>
                 <th class="well">id:</th>
@@ -35,7 +35,7 @@
                 <th class="well">code postale </th>
                 <th class="well">Photo </th>
             </tr>
-         {% for user in listusers  %}
+         {% for user in users  %}
          <tr> 
                 <td class="well well-sm">{{ user.id | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.gender | default("") }}</td>
@@ -59,7 +59,7 @@
    Aucune personne ne s'est enregistré sur le site.
 {% endif %}
     </table>  
-</u>
+</ul>
 </div>
 <a href="{{ '/' }}"><p><h4><span class="label label-success">Retour</span></h4></p></a>
 </div>
