--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,8 +18,9 @@
 
   </head>
 <body>
-{% block logo %}
  <header class="container" >
+{% block logo %}
+
 			  						<div class="row" id="head-color">
 								  <div class="col-lg-3 col-md-2 col-sm-2 hidden-xs">
                   	{# <a href="#"><img class=img-responsive src="{{ asset('./assets/img/logofpi.jpg') }}"  alt="logo"></a> #}
@@ -27,7 +28,9 @@
                   </div>
 								  <div class="col-lg-9 col-md-9 col-sm-9 ">
 									  <h1>FRONT  POPULAIRE  IVOIRIEN</h1>        
-									  <h2>République de Côte d'Ivoire</h2>        
+									  <h3>République de Côte d'Ivoire Représentation FPI-France</h3>
+									  <h2>Section-Lyon (Auvergne-Rhône-Alpes)</h2>        
+
 									  <h5>(Ce site est en essai. Merci de votre compréhension)</h5>        
 								  </div>
 						</div>
@@ -49,10 +52,6 @@
 						<li> <a href="{{ 'login' }}"><p><h4><span class="label label-success">Connexion FPI</span></h4></p></a> </li>
              {% endif %}
           </ul>
-         {# <form class="form-inline">
-             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
-          </form>  #}
 			  </div>
       </nav> 
     </div>
@@ -60,27 +59,28 @@
   {% endblock navbar %}
       <div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      {% block pub %}
-                
-       {% endblock %}
+                  {% block pub %}
+                            
+                  {% endblock %}
             </div>
 			</div>
 
-        <div class="row" id="body-color">
-                <nav class="col-lg-2">
+      <div class="row" id="body-color">
+                <nav class="col-lg-3">
                 {% block gauche %}{% endblock %}
                 </nav>
-                <section class="col-lg-7">
-                {% block body %} {% endblock %}
+                <section class="col-lg-6">
+                    <div class="row">
+                    {% block body %}    {% endblock %}
                 </section>
 
-		            <aside class="col-lg-2">
+		            <aside class="col-lg-3">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-lg-6">
                         {% block droite %} {% endblock %}
                     </div>
                 </aside>
-        </div>
+      </div>
   
   <footer class="row">
 				<h7 class="text-center">       
