--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -2,11 +2,10 @@
 {% block title %}Election_Cote-d'Ivoire_2020{% endblock %}
 
      {% block gauche %}
-               {#     <div> <img src="{{ asset('/assets/img/logofpi.png') }}" class="img-circle"  alt="logo"></div> #} 
   {% if is_granted('ROLE_SYMPATHISANT')  %}
          {% include('menu-accordeon.html.twig') %}
     {% endif %}     
-       {% endblock %}    
+       {% endblock gauche  %}    
         
       
 {% block body %}
@@ -18,4 +17,4 @@
         <div> <img src="{{ asset('assets/img/im_accueiljpeg.png') }}"  class= "img-fluid" alt= "Responsive image"></div> 
  
  {% endif %} 
-{% endblock %}
+{% endblock body %}
