--- a/templates/count/_form.html.twig
+++ b/templates/count/_form.html.twig
@@ -4,7 +4,7 @@
 
 {{ form_start(form_count, {'attr' : {'novalidate':'novalidate'}}) }}
 
-{{ dump(count) }}
+{# {{ dump(count) }} #}
 
 <div class="form-group">
 {{ form_label(form_count.ref) }}
