--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -7,6 +7,10 @@
             </ul>
    </li>
    <li><a href="#">Etre sympathisant</a>
+   <li><a href="#">FPI Innondation</a>
+            <ul>
+               <li><a href="{{ path('cotisation_inondation') }}">Dons électoraux</a></li>
+            </ul>
    <li><a href="#">Don sympathisant</a>
             <ul>
                <li><a href="{{ path('cotisation_formdon') }}">Dons</a></li>
