--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,62 +1,60 @@
 {# templates/base.html.twig #}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %} FPI-FRANCE {% endblock %}</title>
 
-   <title>{% block title %} FPI-FRANCE {% endblock %}</title>
-
-  {% block stylesheets %}
-    {# On charge le CSS de bootstrap depuis le site directement #}
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet">
-    <link href="{{ asset('assets/css/tuto.css') }}" type="text/css" rel="stylesheet">
-    <link href="{{ asset('assets/css/stripeElement.css') }}" type="text/css" rel="stylesheet">
-  {% endblock %}
+        {% block stylesheets %}
+        {# On charge le CSS de bootstrap depuis le site directement #}
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet">
+        <link href="{{ asset('assets/css/tuto.css') }}" type="text/css" rel="stylesheet">
+        <link href="{{ asset('assets/css/stripeElement.css') }}" type="text/css" rel="stylesheet">
+        {% endblock %}
 
   </head>
-<body>
- <header class="container" >
+<header class="container-fluid" >
 {% block logo %}
-
-			  						<div class="row" id="head-color">
+			  		<div class="row" id="head-color">
 								  <div class="col-lg-3 col-md-2 col-sm-2 hidden-xs">
                   	{# <a href="#"><img class=img-responsive src="{{ asset('./assets/img/logofpi.jpg') }}"  alt="logo"></a> #}
-                    <div> <img src="{{ asset('assets/img/logofpi.png') }}" class="img-circle"  alt="logo"></div>
-                  </div>
-								  <div class="col-lg-9 col-md-9 col-sm-9 ">
-									  <h1>FRONT  POPULAIRE  IVOIRIEN</h1>        
-									  <h3>République de Côte d'Ivoire Représentation FPI-France</h3>
-									  <h2>Section-Lyon (Auvergne-Rhône-Alpes)</h2>        
-
-									  <h5>(Ce site est en essai. Merci de votre compréhension)</h5>        
-								  </div>
+                  <div> <img src="{{ asset('assets/img/logofpi.png') }}" class="img-circle"  alt="logo"></div>
+            </div>
+						<div class="col-lg-9 col-md-9 col-sm-9 ">
+									  <h3>FRONT  POPULAIRE  IVOIRIEN Représentation France</h1>        
+									  <h5>Sections FPI: Simone Ehivet, Historique, Grenoble.</h5>       
+									  <h6>(Ce site est réservé exclusivement aux militants du Rhône-Alpes. Merci de votre compréhension)</h6>        
+						</div>
 						</div>
 {% endblock logo %}
 
 {% block navbar %}
- <div class="row" >
+ <div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <nav class="navbar navbar-inverse">
-				<div class="container-fluid">
+				<div class="container">
 				  <ul class="nav navbar-nav">
 					  <li><a href="{{ path('home') }}"><p><h4><span class="label label-info">Accueil</span></h4></p></a> </li>
-						<li><a href="#"><p><h4><span class="label label-info">Front Populaire Ivoirien</span></h4></p></a> </li>
+						{# <li><a href="#"><p><h4><span class="label label-info">Front Populaire Ivoirien</span></h4></p></a> </li> #}
 					{# Si un user existe alors présentez deconnexion, si non présentez connexion #}
           {% if is_granted('ROLE_SYMPATHISANT') %}
 						<li> <a href="{{ path('app_logout') }}"><p><h4><span class="label label-info">Deconnexion</span></h4></p></a> </li>
             {% else %}
           	<li> <a href="{{ path('app_register') }}"><p><h4><span class="label label-warning">Inscription</span></h4></p></a> </li>
-						<li> <a href="{{ 'login' }}"><p><h4><span class="label label-success">Connexion FPI</span></h4></p></a> </li>
+						<li> <a href="{{ 'login' }}"><p><h4><span class="label label-success">Connexion</span></h4></p></a> </li>
              {% endif %}
           </ul>
 			  </div>
       </nav> 
     </div>
 	</div>
-  {% endblock navbar %}
+{% endblock navbar %}
+</header>
+<body>
+<div class="outer-div">
+  {# <div class="inner-div"> #}
       <div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                   {% block pub %}
@@ -84,7 +82,7 @@
   
   <footer class="row">
 				<h7 class="text-center">       
-         <p>Association des Secrétaires Généraux de Section du FPI-France © {{ 'now'|date('Y') }} and beyond.</p>
+         <p>Association des Secrétaires Généraux de Sections du FPI-France © {{ 'now'|date('Y') }} and beyond.</p>
         </h7> 
     
    </footer>
@@ -103,6 +101,8 @@
     })
 </script> 
      {% endblock %}
-  </header>
+  {# </div> #}
+  </div>
+
  </body>
  </html>  
